namespace java com.tobox.totalk.thrift.rpc

include "types/types.thrift"

service RpcService {

}