namespace java com.tobox.totalk.thrift.exceptions
namespace js totalk.thrift

exception NoReviewException{
	1:string id
}

exception AuthenticationRequiredException {

}